made .navbar:fixed; trying to make the navbar have some kind of opacity to see the images come through a bit under the navbar. gave a padding to navbar and image container so they don't overlap.

--- a/main.css
+++ b/main.css
@@ -25,3 +25,13 @@
     .dropdown-menu a:hover{
         display:block;
     }
+    .navbar{
+        position: fixed;
+        right: 0;
+        left: 0;
+        z-index: 1030;
+        background-color: rgba(255,255,255);
+    }
+    #asset{
+        padding-top: 4%;
+    }
